// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<li
  class="ListItem"
  data-test-id="cf-ui-list-item"
>
  ListItem
</li>
`;

exports[`renders the component with an additional class name 1`] = `
<li
  class="ListItem my-extra-class"
  data-test-id="cf-ui-list-item"
>
  ListItem
</li>
`;
